# Quake-2-Tools

./: CMakeLists.txt
bsp/: CMakeLists.txt
bsp/bspinfo3/: CMakeLists.txt
bsp/qbsp3/: CMakeLists.txt  brushbsp.c  glfile.c  leakfile.c  nodraw.c  portals.c  qbsp.h  qbsp3.c  writebsp.c
bsp/qrad3/: CMakeLists.txt  lightmap.c  qrad.h  qrad3.c  trace.c
bsp/qvis3/: CMakeLists.txt  qvis3.c  vis.h
common/: cmdlib.c  cmdlib.h  lbmlib.c  polylib.c  threads.c
qdata/: CMakeLists.txt
unpack/: CMakeLists.txt  unpack.c
